<resources>
    <string name="app_name">Market Remember</string>

    <string name="menu_home_home">Home</string>

    <string name="label_username">YOUR NAME</string>
    <string name="label_phone">TELEPHONE</string>
    <string name="label_email">E-MAIL</string>
    <string name="label_password">PASSWORD</string>

    <string name="label_create_account">Create My Account</string>
    <string name="label_reset_password">Forgot My Password</string>

    <string name="logo_app_content_desc">Logo app</string>
    <string name="button_login">Connect</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_i_have_account">Existing Account</string>

    <string name="login_subtitle">Please login to continue</string>

    <string name="signup_subtitle">Fill in your account details</string>

    <string name="menu_home_profile">Profile</string>
    <string name="loading_message_processing">Loading</string>
    <string name="version">Version 1.0</string>
    <string name="list_all_itens">List All Itens</string>
    <string name="create_new_item">Create New Item</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="return_home">Return</string>
    <string name="DevBy">Developed by:</string>
    <string name="nameDev2">343539 - Wesley Guimarães</string>
    <string name="nameDev1">342789 - Paulo Bof</string>
    <string name="newItemItem">Item</string>

    <string name="createNewItem">Create Item</string>

</resources>
