<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="136dp"
        android:background="@drawable/shape_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/helvetica_neue"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvHomeSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_neue"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvHomeTitle"
            app:layout_constraintStart_toStartOf="@+id/tvHomeTitle"
            tools:text="@string/version" />

        <ImageView
            android:id="@+id/ivHomeLogo"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:contentDescription="@string/logo_app_content_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toEndOf="@+id/tvHomeTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btListAll"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/list_all_itens"
        app:layout_constraintEnd_toEndOf="@+id/tvNewItem"
        app:layout_constraintStart_toStartOf="@+id/tvNewItem"
        app:layout_constraintTop_toBottomOf="@+id/tvNewItem" />

    <Button
        android:id="@+id/btNewItem"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_new_item"
        app:layout_constraintEnd_toEndOf="@+id/btListAll"
        app:layout_constraintStart_toStartOf="@+id/btListAll"
        app:layout_constraintTop_toBottomOf="@+id/btListAll" />


    <TextView
        android:id="@+id/tvNewItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:text="Olá, Sr. Usuário!" />

    <ImageView
        android:id="@+id/ivHomeLogo2"
        android:layout_width="113dp"
        android:layout_height="115dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_app_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNewItem"
        app:srcCompat="@drawable/ic_logo" />

    <ImageView
        android:id="@+id/ivAbout"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_about" />

    <ImageView
        android:id="@+id/ivNewItemBack"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/about"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivAbout"
        app:layout_constraintStart_toEndOf="@+id/ivAbout"
        app:layout_constraintTop_toTopOf="@+id/ivAbout" />

    <TextView
        android:id="@+id/tvNewItemBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/close"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivNewItemBack"
        app:layout_constraintEnd_toStartOf="@+id/ivNewItemBack"
        app:layout_constraintTop_toTopOf="@+id/ivNewItemBack" />

</androidx.constraintlayout.widget.ConstraintLayout>